aggiunte istruzioni e lavoro passato

--- a/chart/config_values.yaml
+++ b/chart/config_values.yaml
@@ -19,7 +19,7 @@ mastodon:
     # @ignored
     username: panuci
     # @ignored
-    email: panuci@example.com
+    email: panuci@mail.com
   cron:
     # -- run `tootctl media remove` every week
     removeMedia:
